--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"test": "playwright test"
 	},
 	"dependencies": {
+		"@astrojs/image": "^0.18.0",
 		"@astrojs/mdx": "^0.19.1",
 		"@astrojs/tailwind": "^3.1.1",
 		"@astrojs/ts-plugin": "^0.4.4",
